--- a/css/main.css
+++ b/css/main.css
@@ -173,3 +173,84 @@ body{
 #new-text{
     resize: none;
 }
+
+.main-area{
+    position: absolute;
+    top: calc(50vh - (50% / 2));
+    height: 50%;
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+}
+
+.wpm-display{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    user-select: none;
+}
+
+.wpm-number{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 3rem;
+    width: 7rem;
+    font-size: 2rem;
+    font-weight: 800;
+    color: black;
+    border-radius: 5px;
+    background-color: whitesmoke;
+}
+
+.wpm-text{
+    font-size: 3rem;
+}
+
+.wpm-tester{
+    width: 70%;
+    height:3rem;
+    border-radius: 10px;
+    background-color: #101010;
+    color: white;
+}
+
+.wpm-test-input{
+    outline: none;
+    width: 100%;
+    height:3rem;
+    border: none;
+    border-radius: 10px;
+    background-color: #101010;
+    text-align: left;
+    color: white;
+    font-size: 2rem;
+    opacity: 0.4;
+}
+
+.wpm-test-base{
+    position: relative;
+    left: 50%;
+    width: 50%;
+    text-align: left;
+}
+
+.wpm-test-user{
+    width: 50%;
+    text-align: right;
+    position: relative;
+    bottom: 3rem;
+    background-color: rgb(0,0,0,0);
+    opacity: 1;
+}
+
+.wpm-click-catcher{
+    height:3rem;
+    width: 100%;
+    position: relative;
+    border-radius: 10px;
+    bottom: 6rem;
+    background-color: rgb(0,0,0,0);
+}
